# polars_ds_extension

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Makefile  NONSTANDARD.md  README.md  README_PYPI.md  SKLEARN_COMPATIBILITY.md  mkdocs.yml  pyproject.toml  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: CI.yml  python-tests.yml
benches/: README.md  bench_t1_entropy.py  bench_t1_knn.py  bench_t1_rolling_lr.py  compare.py  conftest.py  fixtures.py  run_ab.sh
benchmarks/: analyze_benchmarks.ipynb  benchmark.py  benchmarks.ipynb  generate_benchmark_data.py  linear_regression.ipynb  parallelism_crossover.py  requirements-benchmarks.txt  test_linear_regression.py  test_metrics.py  test_num.py
docs/: compat.md  complex.md  complex_ext.md  dia.md  eda.md  expander.md  expr_iter.md  expr_knn.md  expr_linear.md  expr_spline.md  features.md  graph.md  index.md  knn_queries.md  linear_models.md  metrics.md  mkdocs.yml  num.md  num_ext.md  pipeline.md  polars_ds.md  query_knn.md  query_linear.md  requirements-docs.txt  sample.md  sample_and_split.md  sample_and_splits.md  spatial.md  stats.md  stats_ext.md  str2.md  str_ext.md  string.md  ts_features.md
docs/site/: 404.html
docs/site/complex_ext/: index.html
docs/site/num_ext/: index.html
docs/site/search/: search_index.json
docs/site/stats_ext/: index.html
docs/site/str_ext/: index.html
examples/: basics.ipynb  dependency.parquet  diagnosis.ipynb  diagonsis.ipynb  eda.ipynb  pipe.pickle  pipeline.ipynb  sample_and_split.ipynb  test.json  test_diagnosis.ipynb  transfer_entropy.ipynb
maths/: smooth_spline.md
polars_ds/: extensions.py
python/polars_ds/: __init__.py  _utils.py  compat.py  complex.py  complex_ext.py  config.py  diagnosis.py  expander.py  expr_knn.py  expr_linear.py  extensions.py  features.py  graph.py  kdtree.py  knn_queries.py  linear_models.py  metrics.py  num.py  num_ext.py  pipeline.py  query_balltree.py  query_knn.py  query_linear.py  sample.py  sample_and_split.py  spatial.py  stats.py  stats_ext.py  str2.py  str_ext.py  string.py  transforms.py  ts_features.py  type_alias.py  typing.py
python/polars_ds/compat/: __init__.py  _compat.py
python/polars_ds/diagnosis/: __init__.py  diagnosis.py
python/polars_ds/eda/: __init__.py  diagnosis.py  plots.py
python/polars_ds/exprs/: __init__.py  expr_iter.py  expr_knn.py  expr_linear.py  expr_spline.py  metrics.py  num.py  stats.py  string.py  survival.py  ts_features.py
scripts/: dev-env.sh
site/: index.html  objects.inv
site/complex_ext/: index.html
site/num_ext/: index.html
site/search/: search_index.json
site/stats_ext/: index.html
site/str_ext/: index.html
src/: lib.rs
src/arkadia/: arkadia.rs  arkadia_any.rs  arkadia_lp.rs  ball_tree.rs  kdt.rs  kdt2.rs  leaf.rs  mod.rs  neighbor.rs  utils.rs
src/graph/: degree.rs  dijkstra.rs  eigen_centrality.rs  mod.rs  shortest_path.rs
src/linalg/: glm_solvers.rs  link_functions.rs  lr_online_solvers.rs  lr_solvers.rs  lstsq.rs  mod.rs
src/linear/: mod.rs  utils.rs
src/num/: complex.rs  cond_entropy.rs  convolve.rs  entrophies.rs  fft.rs  float_extras.rs  gcd_lcm.rs  jaccard.rs  knn.rs  linear_regression.rs  logit_expit_gamma.rs  matrix_profile.rs  mod.rs  ols.rs  pca.rs  psi.rs  target_encode.rs  tp_fp.rs  trapz.rs  woe_iv.rs
src/num_ext/: approximate_entropy.rs  ball_tree.rs  benford.rs  complex.rs  cond_entropy.rs  convolve.rs  entrophies.rs  expressions.rs  fft.rs  float_extras.rs  gcd_lcm.rs  haversine.rs  isotonic_regression.rs  iterations.rs  jaccard.rs  knn.rs  lempel_ziv.rs  linear_regression.rs  linear_regression_f32.rs  logistic_regression.rs  mod.rs  mutual_info.rs  ols.rs  pca.rs  powi.rs  psi.rs  splines.rs  subseq_sim.rs  target_encode.rs  tp_fp.rs  trapz.rs  welch.rs  woe_iv.rs
src/optimize/: lbfgs.rs  mod.rs
src/pds_string/: inflections.rs  jaro.rs  knn_strs.rs  levenshtein.rs  mod.rs  sorensen_dice.rs
src/pymodels/: mod.rs  numpy_faer.rs  py_glm.rs  py_kdt.rs  py_lr.rs
src/stats/: beta.rs  chi2.rs  fstats.rs  gamma.rs  interpolation.rs  kaplan_meier.rs  kendall_tau.rs  ks.rs  mann_whitney_u.rs  mod.rs  normal.rs  normal_test.rs  sample.rs  t_test.rs  xi_corr.rs
src/stats_ext/: chi2.rs  fstats.rs  kendall_tau.rs  ks.rs  mann_whitney_u.rs  mod.rs  normal_test.rs  sample.rs  t_test.rs  xi_corr.rs
src/stats_utils/: beta.rs  gamma.rs  mod.rs  normal.rs
src/str2/: aho_corasick.rs  fuzz.rs  hamming.rs  inflections.rs  is_stopword.rs  jaro.rs  knn_strs.rs  levenshtein.rs  mod.rs  osa.rs  overlap.rs  snowball_stem.rs  sorensen_dice.rs  str_cleaning.rs  str_jaccard.rs  tversky.rs
src/str_ext/: aho_corasick.rs  consts.rs  expressions.rs  fuzz.rs  generic_str_distancer.rs  hamming.rs  hamming_dist.rs  is_stopword.rs  jaro.rs  knn_strs.rs  lcs_seq.rs  lcs_str.rs  levenshtein.rs  levenshtein_dist.rs  mod.rs  nearest_str.rs  osa.rs  overlap.rs  snowball_stem.rs  sorensen_dice.rs  str_cleaning.rs  str_jaccard.rs  tversky.rs
src/utils/: interop.rs  mod.rs  parallelism.rs
tests/: Untitled.ipynb  _diff_bits.py  _parity_registry.py  adhoc.py  parity_oracle.py  requirements-test.txt  requirements-test2.txt  test.ipynb  test_bench_graph.py  test_compat.py  test_correctness.py  test_ext.py  test_knn_entropy.py  test_linear_exprs.py  test_linear_models.py  test_many.py  test_memory.py  test_metrics.py  test_num_ext.py  test_spatial_queries.py  test_str2.py  test_string.py  test_survival.py  test_transforms.py
tests/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
tests/benchmarks/: test_linear_regression.py
tests/fixtures/: __init__.py  _build.py  medium_multichunk_p0.parquet  medium_multichunk_p1.parquet  medium_multichunk_p2.parquet  medium_multichunk_p3.parquet  medium_with_nulls.parquet  tiny_clean.parquet  tiny_with_nulls.parquet  tiny_with_specials.parquet
tests/parity_cases/: pl_approximate_entropy.py  pl_nb_cnt.py  pl_query_radius_ptwise.py  pl_query_radius_ptwise_null_safe.py  pl_rolling_lr.py  pl_sample_entropy.py
(+36 files in other folders)
