[package]
name = "polars_ds"
version = "0.10.5"
edition = "2021"

[lib]
name = "_polars_ds"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# PyO3
numpy = "0.26" # matrix interop
pyo3 = {version = "0.26", features = ["abi3-py39", "extension-module"]}
pyo3-polars = {version = "0.25", features = ["derive", "lazy"]} 
# Polars
polars = {version = "0.52", features = ["lazy",
"diff", "array_count", "abs", "cross_join", "rank", "log",
"cum_agg", "round_series", "chunked_ids", "dtype-i128", "performant", "new_streaming"], default-features = false}
# Numerical / Linear Algebra
rand = "0.8.5"
rand_distr = "0.4.3"
realfft = "3.3.0"
num = "0.4.1"
ordered-float = "4.2.0"
approx = "*"
faer = {version = "0.23", default-features = false, features = ["nightly", "rayon", "sparse-linalg"]}
faer-traits = {version = "0.23"}
ndarray = {version="0.16"}
cfavml = {version = "0.3.0", features=["nightly"]} # easy simd
# Data Structures, Iteration Helpers
itertools = "0.12.0"
ahash = ">=0.8.5"
hashbrown = {version = "0.15", features=["nightly"]}
# Serialization
serde = {version = "*", features=["derive"]}
# String related
rapidfuzz = "0.5.0"
inflections = "1.1.1"
# Deprecated
unicode-normalization = "0.1.23"

[profile.release]
codegen-units = 1
strip = "symbols" 
lto = "fat"
