[package]
name = "polars_ds"
version = "0.11.0"
edition = "2021"

[lib]
name = "_polars_ds"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# PyO3
numpy = "0.26" # matrix interop
pyo3 = {version = "0.26", features = ["abi3-py39", "extension-module"]}
pyo3-polars = {version = "0.25", features = ["derive", "lazy"]} 
# Polars
polars = {version = "0.52", features = ["lazy",
"diff", "array_count", "abs", "cross_join", "rank", "log",
"cum_agg", "round_series", "chunked_ids", "dtype-i128", "performant", "new_streaming"], default-features = false}
# Numerical / Linear Algebra
rand = "*"
rand_distr = "*"
num = "*"
ordered-float = "4.2.0"
approx = "*"
# Heavy math
realfft = "*"
ndarray = {version="0.16"} # want to replace one day
cfavml = {version = "0.3.0", features=["nightly"]} # easy simd
faer = {version = "0.23", default-features = false, features = ["nightly", "rayon", "sparse-linalg"]}
faer-traits = {version = "0.23"}
argmin = "0.11.0"
argmin-math = {version = "0.5.1", default-features = false, features = ["faer_v0_23"]}
# Data Structures, Iteration Helpers
itertools = "*"
ahash = "*"
hashbrown = "*"
# Serialization
serde = {version = "*", features=["derive"]}
# String related
rapidfuzz = "0.5.0"
inflections = "1.1.1"
# Deprecated
unicode-normalization = "0.1.23"


[profile.release]
debug = false
codegen-units = 1
strip = "symbols" 
lto = "fat"
