[build-system]
requires = ["maturin>=1.7.4"]
build-backend = "maturin"

[project]
name = "polars-ds-lts-cpu"
requires-python = ">=3.10"
version = "0.10.2"
readme = "README_PYPI.md"

license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
authors = [{ name = "Tianren Qin", email = "tq9695@gmail.com" }]
dependencies = [
    "polars-lts-cpu>=1.33.0",
    "typing-extensions>=4.15.0,<5.0.0",
]

keywords = ["polars-extension", "scientific-computing", "data-science"]

[project.urls]
"Homepage" = "https://github.com/milaboratory/polars_ds_extension-lts-cpu"
"Bug Tracker" = "https://github.com/milaboratory/platforma/issues"

[project.optional-dependencies]
plot = ["great-tables>=0.9", "graphviz>=0.20", "altair >= 5.4.0", "vegafusion[embed]"]
models = ["numpy>=1.16"]
compat = ["numpy>=1.16"]
all = ["great-tables>=0.9", "graphviz>=0.20", "numpy>=1.16", "altair >= 5.4.0", "vegafusion[embed]"]

[tool.maturin]
strip = true
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "polars_ds._polars_ds"

[tool.ruff]
line-length = 100
fix = true
src = ["python"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
